# local-taste

./: .env.example
backend/: check_db.py  deploy_all_lambdas.py  package_docker.py  pyproject.toml  test_full.py  test_simple.py  watch_agents.py
backend/api/: main.py  package_docker.py  pyproject.toml
backend/charter/: agent.py  lambda_handler.py  package_docker.py  templates.py
backend/database/: apply_all_migrations.py  apply_migration.py  pyproject.toml  reset_db.py  run_migrations.py  seed_data.py  test_data_api.py  verify_database.py
backend/dish-discoverer/: agent.py  judge.py  lambda_handler.py  observability.py  package_docker.py  pyproject.toml  templates.py  test_full.py  test_simple.py
backend/planner/: agent.py  lambda_handler.py  templates.py
backend/reporter/: agent.py  lambda_handler.py  package_docker.py  templates.py
backend/researcher/: server.py
backend/restaurant-ranker/: agent.py  lambda_handler.py  observability.py  package_docker.py  pyproject.toml  subcategories.py  templates.py  test_full.py  test_simple.py
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/components/: CityAutocomplete.tsx  ConfirmModal.tsx  ErrorBoundary.tsx  ItineraryMap.tsx  Layout.tsx  OnboardingWizard.tsx  Portal.tsx  Toast.tsx
frontend/lib/: api.ts  cities.ts  dietary.ts
frontend/pages/: 404.tsx  500.tsx  _document.tsx  accounts.tsx  advisor-team.tsx  analysis.tsx  dashboard.tsx  explore.tsx  index.tsx  itinerary.tsx  passport.tsx  plan.tsx
mobile/: .env.example  App.tsx  app.json  package.json
(+41 files in other folders)
