[project]
name = "restaurant-ranker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "localtaste-database",
    "boto3>=1.40.9",
    "langfuse>=3.3.4",
    "openai-agents[litellm]>=0.2.6",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "googlemaps>=4.10.0",
    "tenacity>=9.1.2",
    "json-repair>=0.30.0",
]

[tool.uv.sources]
localtaste-database = { path = "../database", editable = true }
